--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.7.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -48,8 +50,10 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next": "^15.3.1",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
     "openai": "^4.96.0",
+    "prisma": "^6.7.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
